# sonora

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.fr.md  README.md  flake.nix  index.html  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-release.yml  ci.yml  codeql.yml  nix.yml  pages.yml  release.yml  security-audit.yml  update-bun.yml  update-flake-lock.yml
brand/: README.template.md  _banner.html
docs/: docs.html  index.html
docs/assets/: styles.css
docs/fr/: docs.html  index.html
scripts/: build.sh  bump-version.mjs  dev.sh  gen-placeholders.sh  inspect-layout.js  inspect-layout.sh  screenshot.js  screenshots.sh  sync-bun-deps-hash.sh
src/: App.svelte  History.svelte  Panel.svelte  Settings.svelte  SettingsForm.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Info.plist  sonora.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  cleanup.rs  events.rs  lib.rs  main.rs  output.rs  secrets.rs  settings.rs
src-tauri/src/providers/: gemini.rs  mod.rs  openai_compat.rs  whisper_local.rs
src/lib/: Select.svelte  clipboard.ts  history.ts  providers.ts  settings.ts  tauri.ts  types.ts
