[package]
name = "transcript"
version = "0.1.0"
description = "Real-time speech-to-text with pluggable models"
authors = ["Thomas"]
edition = "2021"
rust-version = "1.77"

# The library is what Tauri actually runs; main.rs is a thin shim.
[lib]
name = "transcript_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17.1"
tokio = { version = "1.52.3", features = ["sync", "macros", "time", "rt"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"
base64 = "0.22.1"
dotenvy = "0.15"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
