[package]
name = "sonora"
version = "0.2.10"
description = "Sonora — real-time speech-to-text with pluggable models"
authors = ["Thomas"]
edition = "2021"
rust-version = "1.77"

# The library is what Tauri actually runs; main.rs is a thin shim.
[lib]
name = "sonora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17.1"
tokio = { version = "1.52.3", features = ["sync", "macros", "time", "rt"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
futures-util = "0.3.32"
base64 = "0.22.1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["multipart", "json"] }
whisper-rs = "0.16.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

# Synthetic keystrokes for "type at cursor" on macOS/Windows. On Linux we shell
# out to wtype / xdotool instead (see src/output.rs).
[target.'cfg(not(any(target_os = "linux", target_os = "android", target_os = "ios")))'.dependencies]
enigo = "0.3"

# OS keyring for API keys (with an encrypted-file fallback, see src/secrets.rs).
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
